--- a/CustomViews/app/src/main/res/values/strings.xml
+++ b/CustomViews/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     
     <string name="histogram">直方图</string>
     <string name="pie_chart">饼图</string>
+    <string name="float_view">悬浮按钮</string>
 </resources>
