--- a/CustomViews/app/src/main/res/values/strings.xml
+++ b/CustomViews/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="float_view">悬浮按钮</string>
     <string name="clock_view">机械表</string>
     <string name="loading_view">加载框</string>
-    <string name="rule_view">尺子</string>
+    <string name="rule_view">滑动卷尺</string>
 </resources>
